--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,6 @@ before_install:
 
 deploy:
   provider: script
-  script:
-    bash docker_push_dockerhub
-    bash docker_push_heroku
+  script: bash docker_push_heroku
   on:
     branch: master
