--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 before_install:
   - docker build -t unkeep/alfabooker .
   - wget -qO- https://toolbelt.heroku.com/install.sh | sh
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  # - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker login --username=_ --password=$HEROKU_APIKEY registry.heroku.com
 
 script:
@@ -15,7 +15,7 @@ script:
 deploy:
   provider: script
   script:
-    docker push unkeep/alfabooker:latest;
+    #docker push unkeep/alfabooker:latest;
     docker push registry.heroku.com/alfabooker/web;
     heroku container:release web --app alfabooker
   on:
