--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ before_install:
   - docker build -t unkeep/alfabooker .
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push unkeep/alfabooker
-  - cd aws
+
+before_deploy:
+  - find . -type f -not -name 'Dockerrun.aws.json' -print0 | xargs -0 rm --
 
 deploy:
   provider: elasticbeanstalk
@@ -18,6 +20,7 @@ deploy:
   region: "eu-central-1"  
   app: "alfabooker"
   env: "Alfabooker-env"
+  skip_cleanup: true
   bucket_name: "elasticbeanstalk-eu-central-1-497796177862"
   on:
     branch: master
