--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,12 @@ before_install:
 deploy:
   - provider: script
     script: docker push unkeep/alfabooker
-    on:
-      branch: master
+    on: master
   - provider: script
     script: 
       - docker image tag unkeep/alfabooker unkeep/alfabooker:test
       - docker push unkeep/alfabooker:test
-    on:
-      branch: dev
+    on: dev
   - provider: elasticbeanstalk
     zip_file: 'aws.zip'
     access_key_id: 
@@ -28,8 +26,7 @@ deploy:
     app: "alfabooker"
     env: "Alfabooker-env-temp"
     bucket_name: "elasticbeanstalk-eu-central-1-497796177862"
-    on:
-      branch: master
+    on: master
   - provider: elasticbeanstalk
     zip_file: 'aws-test.zip'
     access_key_id: 
@@ -40,6 +37,5 @@ deploy:
     app: "alfabooker"
     env: "Alfabooker-env-test"
     bucket_name: "elasticbeanstalk-eu-central-1-497796177862"
-    on:
-      branch: dev
+    on: dev
   
